<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="4"
        android:id="@+id/gridlayout">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RPM"
            android:id="@+id/rpmText"
            android:layout_column="0"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textSize="36dp"/>
        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_rpm"
            android:layout_width="320dp"
            android:layout_height="320dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_rowSpan="2"
            app:rangeColors="@array/rangesRPMColors"
            app:rangeValues="@array/rangesRPM"
            app:scaleEndValue="70"
            app:scaleStartValue="0"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="RPM"
            app:textUnitSize="0.05"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/Idle"
            android:id="@+id/idleText"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="36dp"
            android:background="@android:color/holo_blue_dark"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/Partial"
            android:id="@+id/partialText"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="36dp"
            android:background="@android:color/holo_green_dark"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/WOT"
            android:id="@+id/wotText"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="36dp"
            android:background="@android:color/holo_orange_dark"
            android:visibility="invisible"/>
        <TextView
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:text="@string/Malfunction"
            android:id="@+id/malfunctionText"
            android:layout_column="0"
            android:layout_row="3"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="36dp"
            android:background="@android:color/holo_red_dark"
            android:visibility="invisible"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_afm"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="1"
            android:layout_column="1"
            app:scaleStartValue="0"
            app:scaleEndValue="5"
            app:rangeColors="@array/rangesSTDColors"
            app:rangeValues="@array/rangesSTD"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="A"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/afmText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AFM"
            android:layout_column="1"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_inj_timing_b1"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="1"
            android:layout_column="2"
            app:scaleStartValue="0"
            app:scaleEndValue="30"
            app:rangeColors="@array/rangesINJColors"
            app:rangeValues="@array/rangesINJ"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="MS"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/bnk1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INJBNK1"
            android:layout_column="2"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_inj_timing_b2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="1"
            android:layout_column="3"
            app:scaleStartValue="0"
            app:scaleEndValue="30"
            app:rangeColors="@array/rangesINJColors"
            app:rangeValues="@array/rangesINJ"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="MS"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/bnk2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/INJBNK2"
            android:layout_column="3"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_o2"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="1"
            android:layout_column="4"
            app:scaleStartValue="0"
            app:scaleEndValue="5"
            app:rangeColors="@array/rangesO2Colors"
            app:rangeValues="@array/rangesO2"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="AFR"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/o2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/O2"
            android:layout_column="4"
            android:layout_row="0"
            android:layout_gravity="center"
            android:textSize="18dp"/>


        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_cts"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="2"
            android:layout_column="1"
            app:scaleStartValue="0"
            app:scaleEndValue="5"
            app:rangeColors="@array/rangesTMPColors"
            app:rangeValues="@array/rangesTMP"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="V"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/ctsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CTS"
            android:layout_column="1"
            android:layout_row="3"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_ait"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="2"
            android:layout_column="2"
            app:scaleStartValue="0"
            app:scaleEndValue="5"
            app:rangeColors="@array/rangesTMPAColors"
            app:rangeValues="@array/rangesTMPA"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="7"
            app:subdivisions="4"
            app:textUnit="V"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/aitText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AIT"
            android:layout_column="2"
            android:layout_row="3"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_volt"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="2"
            android:layout_column="3"
            app:scaleStartValue="10"
            app:scaleEndValue="16"
            app:rangeColors="@array/rangesVoltColors"
            app:rangeValues="@array/rangesVolt"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="6"
            app:subdivisions="2"
            app:textUnit="V"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/voltText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Voltage"
            android:layout_column="3"
            android:layout_row="3"
            android:layout_gravity="center"
            android:textSize="18dp"/>

        <src.com.hoho.android.usbserial.examples.gauge.GaugeView
            android:id="@+id/gauge_spd"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_row="2"
            android:layout_column="4"
            app:rangeColors="@array/rangesSpeedColors"
            app:rangeValues="@array/rangesSpeed"
            app:scaleEndValue="200"
            app:scaleStartValue="0"
            app:showRanges="true"
            app:showScale="true"
            app:showText="true"
            app:divisions="10"
            app:subdivisions="4"
            app:textUnit="KPH"
            app:textUnitSize="0.05"/>
        <TextView
            android:id="@+id/spdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SPD"
            android:layout_column="4"
            android:layout_row="3"
            android:layout_gravity="center"
            android:textSize="18dp"/>

    </GridLayout>
    
    <ScrollView
        android:id="@+id/demoScroller"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridlayout" >

        <TextView
            android:id="@+id/consoleText"
            android:textIsSelectable="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:typeface="monospace" />
    </ScrollView>

</RelativeLayout>